2007-04-02  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Remove the rejection
	of streams based on mime-type, too many false positives
	(Closes: #418387)

2007-03-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-missing-plugins.c: (on_plugin_installation_done):
	  Make sure an error dialog gets shown if the installer returns a
	  not-found exit code (Closes: #424520)

2007-03-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_callback_connect): Make the seek back/forth
	and skipto menu items unsensitive on startup (Closes: #370021)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_setup_recent): Patch from Philip Withnall
	<bugzilla@tecnocode.co.uk> to grab the recent files manager from
	the right screen (Closes: #395195)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* data/uri.glade: patch from Emil Soleyman-Zomalan <emil@soleyman.com>
	to make the Open Location dismiss when pressing enter (Closes: #394215)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_open_location): Fix leak when
	stream is already in the recent files, spotted by Christian
	Persch <chpe@svn.gnome.org> (Closes: #423079)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_setup_window): Patch from Christian Persch
	<chpe@svn.gnome.org> to fix a memory leak (Closes: #423067)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key_press): Make pause actually
	pause, and stop pause as well (Closes: #422956)

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_bus_message_cb):
	  No need to flood stdout with g_message()s if we find an unknown
	  GstMessage type on the bus (Closes: #420253).

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_add_default_dirs), (totem_add_files),